--- a/404.html
+++ b/404.html
@@ -8,13 +8,13 @@
     
     <meta name="description" content="一个UI框架">
     
-    <link rel="preload" href="/assets/css/0.styles.b23bcaa9.css" as="style"><link rel="preload" href="/assets/js/app.1125a126.js" as="script"><link rel="preload" href="/assets/js/6.aa41f0fc.js" as="script"><link rel="prefetch" href="/assets/js/2.c7699a5c.js"><link rel="prefetch" href="/assets/js/3.1d5d3c9d.js"><link rel="prefetch" href="/assets/js/4.2317eb96.js"><link rel="prefetch" href="/assets/js/5.657c527b.js"><link rel="prefetch" href="/assets/js/7.16f8fb1c.js">
+    <link rel="preload" href="/assets/css/0.styles.b23bcaa9.css" as="style"><link rel="preload" href="/assets/js/app.3b125b2e.js" as="script"><link rel="preload" href="/assets/js/6.aa41f0fc.js" as="script"><link rel="prefetch" href="/assets/js/2.c7699a5c.js"><link rel="prefetch" href="/assets/js/3.1d5d3c9d.js"><link rel="prefetch" href="/assets/js/4.2317eb96.js"><link rel="prefetch" href="/assets/js/5.657c527b.js"><link rel="prefetch" href="/assets/js/7.3f63f537.js">
     <link rel="stylesheet" href="/assets/css/0.styles.b23bcaa9.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>Looks like we've got some broken links.</blockquote> <a href="/" class="router-link-active">
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>There's nothing here.</blockquote> <a href="/" class="router-link-active">
       Take me home.
     </a></div></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.1125a126.js" defer></script><script src="/assets/js/6.aa41f0fc.js" defer></script>
+    <script src="/assets/js/app.3b125b2e.js" defer></script><script src="/assets/js/6.aa41f0fc.js" defer></script>
   </body>
 </html>
