--- a/index.html
+++ b/index.html
@@ -18,49 +18,32 @@
   <link rel="prefetch" href="/assets/js/5.657c527b.js">
   <link rel="prefetch" href="/assets/js/6.aa41f0fc.js">
   <link rel="stylesheet" href="/assets/css/0.styles.b23bcaa9.css">
+  <style>
+    .btn {
+      width: 200px;
+      height: 40px;
+      border: 0;
+      background: #07c160;
+      color: #fff;
+      border-radius: 6px;
+      margin: 100px;
+      outline: none;
+      cursor: pointer;
+    }
+
+    .btn:active {
+      opacity: 0.8;
+    }
+  </style>
 </head>
 
 <body>
-  <div id="app" data-server-rendered="true">
-    <div class="theme-container no-sidebar">
-      <header class="navbar">
-        <div class="sidebar-button"><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img"
-            viewBox="0 0 448 512" class="icon">
-            <path fill="currentColor"
-              d="M436 124H12c-6.627 0-12-5.373-12-12V80c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12z">
-            </path>
-          </svg></div> <a href="/" aria-current="page" class="home-link router-link-exact-active router-link-active">
-          <!----> <span class="site-name">JUI</span>
-        </a>
-        <div class="links">
-          <div class="search-box"><input aria-label="Search" autocomplete="off" spellcheck="false" value="">
-            <!---->
-          </div>
-          <!---->
-        </div>
-      </header>
-      <div class="sidebar-mask"></div>
-      <aside class="sidebar">
-        <!---->
-        <!---->
-      </aside>
-      <main class="page">
-        <div class="theme-default-content content__default"></div>
-        <footer class="page-edit">
-          <!---->
-          <!---->
-        </footer>
-        <!---->
-      </main>
-    </div>
-    <div class="global-ui"></div>
-  </div>
 
-  <button>钢小秘</button>
-
-  <script src="/assets/js/app.3b125b2e.js" defer></script>
-  <script src="/assets/js/2.c7699a5c.js" defer></script>
-  <script src="/assets/js/7.3f63f537.js" defer></script>
+  <script>
+    window.onload = function () {
+      location.href = 'weixin://dl/business/?t=hzN9OuVFgDv'
+    }
+  </script>
 </body>
 
 </html>
