--- a/index.html
+++ b/index.html
@@ -38,10 +38,13 @@
 </head>
 
 <body>
-
   <script>
+    // document.querySelector('.btn').onclick = function () {
+    //   window.open("https://www.baidu.com/");
+    // }
+
     window.onload = function () {
-      location.href = 'weixin://dl/business/?t=hzN9OuVFgDv'
+      location.href = 'weixin://dl/business/?t=WRcka7JKIet'
     }
   </script>
 </body>
